feat: add pwd reset

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,11 +1,18 @@
 {
-  "email.accountConfirm.greetings": "Welcome!",
+  "email.greetings": "Welcome!",
+  "email.alternativeLink": "If the link above does not work, use this one",
+  "email.invalidToken": "Token invalid or expired",
+
   "email.accountConfirm.subject": "Welcome to LFG!",
   "email.accountConfirm.body": "There's just one more step before! To be able to login you need to confirm your account by clicking the button above.",
   "email.accountConfirm.body2": "This link is only valid for 48h",
-  "email.accountConfirm.alternativeLink": "If the link above does not work, use this one",
   "email.accountConfirm.alternativeLinkTitle": "Link to confirm account",
   "email.accountConfirm.confirmButton": "Confirm account",
-  "email.accountConfirm.invalidToken": "Token invalid or expired",
-  "email.accountConfirm.accountConfirmed": "Account confirmed. You can now close this tab and login"
+  "email.accountConfirm.accountConfirmed": "Account confirmed. You can now close this tab and login",
+
+  "email.resetPassword.subject": "LFG App - Password reset",
+  "email.resetPassword.body": "We've received a request for a password reset. If this wasn't you, feel free to ignore this email",
+  "email.resetPassword.body2": "If it was you, click on the button above and follow the steps. This link will only be valid for 30 minutes",
+  "email.resetPassword.alternativeLinkTitle": "Link to reset password",
+  "email.resetPassword.confirmButton": "Reset password"
 }
